add user function

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,9 @@
+<!-- <div *ngFor="let user of getList()" class="single-user"> {{ user }} </div> -->
+
+
+
+
+
 <button (click)="openDialog()" matTooltip="Add User" [matTooltipPosition]="'above'" class="btn-add" mat-fab
     color="primary" aria-label="Example icon button with a delete icon">
     <mat-icon>add</mat-icon>
