added user list

--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -3,3 +3,19 @@
     bottom: 56px;
     right: 56px;
 }
+
+table {
+
+
+    tr {
+        text-align: start;
+    }
+
+
+    th {
+        text-align: start;
+    }
+
+
+
+}
