--- a/src/app/dialog-add-user/dialog-add-user.component.scss
+++ b/src/app/dialog-add-user/dialog-add-user.component.scss
@@ -1,28 +1,41 @@
+.container-progress-bar {
+    padding: 0;
+}
+
+
 .container-input-names {
     display: flex;
     gap: 16px;
-    padding: 4px;
+    padding: 4px 0;
 }
 
 .container-input-birthday {
     display: flex;
     gap: 16px;
-    padding: 4px;
+    padding: 4px 0;
 }
 
 .container-input-address-street {
     display: flex;
     gap: 16px;
-    padding: 4px;
+    padding: 4px 0;
 }
 
 .container-input-address-city {
     display: flex;
     gap: 16px;
-    padding: 4px;
+    padding: 4px 0;
 }
 
-.input-address-street, .input-birthday {
+.container-input-email {
+    display: flex;
+    gap: 16px;
+    padding: 4px 0;
+}
+
+.input-address-street,
+.input-birthday,
+.input-email {
     width: 100%;
 }
 
