--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,22 @@
-<!-- <div *ngFor="let user of getList()" class="single-user"> {{ user }} </div> -->
+<mat-card>
+    <table>
+        <tr>
+            <th>Last name</th>
+            <th>First name</th>
+            <th>E-mail</th>
+            <th>City</th>
+        </tr>
 
+        <tr *ngFor="let user of listUser; let i = index">
+            <td>{{ listUser[i]['lastName'] }}</td>
+            <td>{{ listUser[i]['firstName'] }}</td>
+            <td>{{ listUser[i]['email'] }}</td>
+            <td>{{ listUser[i]['city'] }}</td>
+        </tr>
 
+    </table>
 
+</mat-card>
 
 
 <button (click)="openDialog()" matTooltip="Add User" [matTooltipPosition]="'above'" class="btn-add" mat-fab
