form validation-function

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <table>
-        <tr>
+        <tr class="first-row">
             <th>Last name</th>
             <th>First name</th>
             <th>E-mail</th>
