--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -2,32 +2,35 @@
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
 </div>
 
-
 <h1 mat-dialog-title>Add User</h1>
 <div mat-dialog-content>
     <div class="container-input-names">
         <mat-form-field appearance="outline">
             <mat-label>First name</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="">
+            <input (keyup)="checkValidation()" required id="firstName" name="firstName" class="form-control"
+                minlength="4" #name="ngModel" [disabled]="loading" [(ngModel)]="user.firstName" matInput placeholder="">
         </mat-form-field>
 
         <mat-form-field appearance="outline">
             <mat-label>Last name</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.lastName" matInput placeholder="">
+            <input (keyup)="checkValidation()" required [disabled]="loading" [(ngModel)]="user.lastName" matInput
+                placeholder="">
         </mat-form-field>
     </div>
 
     <div class="container-input-email">
         <mat-form-field class="input-email" appearance="outline">
             <mat-label>E-mail</mat-label>
-            <input type="email" [disabled]="loading" [(ngModel)]="user.email" matInput placeholder="">
+            <input (keyup)="checkValidation()" required type="email" [disabled]="loading" [(ngModel)]="user.email"
+                matInput placeholder="">
         </mat-form-field>
     </div>
 
     <div class="container-input-birthday">
         <mat-form-field class="input-birthday">
             <mat-label>Birth Date</mat-label>
-            <input [disabled]="loading" [(ngModel)]="birthDate" matInput [matDatepicker]="picker">
+            <input (keyup)="checkValidation()" required [disabled]="loading" [(ngModel)]="birthDate" matInput
+                [matDatepicker]="picker">
             <mat-hint>MM/DD/YYYY</mat-hint>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
@@ -38,7 +41,8 @@
     <div class="container-input-address-street">
         <mat-form-field class="input-address-street" appearance="outline">
             <mat-label>Street & House number</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.street" matInput placeholder="">
+            <input (keyup)="checkValidation()" required [disabled]="loading" [(ngModel)]="user.street" matInput
+                placeholder="">
         </mat-form-field>
 
     </div>
@@ -47,12 +51,14 @@
 
         <mat-form-field class="input-zip" appearance="outline">
             <mat-label>Zip code</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.zipCode" type="text" matInput maxlength="10" placeholder="">
+            <input (keyup)="checkValidation()" required [disabled]="loading" [(ngModel)]="user.zipCode" type="text"
+                matInput maxlength="10" placeholder="">
         </mat-form-field>
 
         <mat-form-field class="input-city" appearance="outline">
             <mat-label>City</mat-label>
-            <input [disabled]="loading" [(ngModel)]="user.city" matInput placeholder="">
+            <input (keyup)="checkValidation()" required [disabled]="loading" [(ngModel)]="user.city" matInput
+                placeholder="">
         </mat-form-field>
 
 
@@ -66,6 +72,7 @@
 
 </div>
 <div mat-dialog-actions>
-    <button [disabled]="loading" mat-button (click)="onNoClick()">Cancel</button>
-    <button [disabled]="loading" mat-button (click)="saveUser()" [mat-dialog-close]="" cdkFocusInitial>Save</button>
+    <button [disabled]="loading" mat-button (click)="onNoClick()" [mat-dialog-close]="">Cancel</button>
+    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="saveUser()" [mat-dialog-close]=""
+        cdkFocusInitial>Save</button>
 </div>
