added logo + css table

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,6 +17,14 @@
     min-height: 56px;
     display: flex;
     align-items: center;
+    background-color: lightgray;
+
+
+    img {
+        max-width: 75%
+    }
+
+
 }
 
 mat-toolbar,
