--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -6,6 +6,8 @@
 
 
 
+
+
 table {
 
     line-height: 2;
@@ -14,6 +16,13 @@ table {
 
     tr {
         text-align: start;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+
+
+        &:last-child,
+        &:first-child {
+            border-bottom: 0;
+        }
 
         &:hover {
             background-color: rgba(0, 0, 0, 0.1);
@@ -21,22 +30,27 @@ table {
         }
     }
 
+    td {
+        padding: 4px;
+    }
+
     th {
         text-align: start;
-
+        font-size: 16px;
+        padding: 4px;
     }
 
 }
 
 .first-row {
     background-color: #3f51b5;
-    border: none;
+    //border: none;
     color: white;
 
 
     &:hover {
         background-color: #3f51b5 !important;
-        border: none !important;
+        //border: none !important;
         color: white !important;
         cursor: unset !important;
     }
