added edit function

--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -37,3 +37,17 @@
 .mat-card-content {
     margin-top: 32px;
 }
+
+
+.icon-more-options {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
+.icon-back-to-user {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
