--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -3,9 +3,27 @@
     <mat-card *ngIf="dataLoaded" class="mat-card-header">
         <img src="../../assets/img/user-pic-male.png" alt="">
         <div class="user-details-header">
-            <h2>{{ userData.firstName }} {{ userData.lastName}}</h2>
-            {{ userData.email }}
+            <h2>{{ user.firstName }} {{ user.lastName}}</h2>
+            {{ user.email }} <br>
+            Birthday: {{ user.birthDate }}
         </div>
+
+        <button [matMenuTriggerFor]="menuHeader" class="icon-more-options" mat-icon-button>
+            <mat-icon>more_vert</mat-icon>
+        </button>
+
+        <mat-menu #menuHeader="matMenu">
+            <button mat-menu-item (click)="editUserDetail()">Edit</button>
+        </mat-menu>
+
+
+
+        <button [routerLink]="['/user/']" class="icon-back-to-user" mat-icon-button aria-label="">
+            <mat-icon>arrow_back</mat-icon>
+        </button>
+
+
+
     </mat-card>
 
     <mat-card *ngIf="dataLoaded" class="mat-card-content">
@@ -13,9 +31,17 @@
             <mat-card-title>Address</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            {{ userData.street }} <br>
-            {{ userData.zipCode }} {{ userData.city }}
+            {{ user.street }} <br>
+            {{ user.zipCode }} {{ user.city }}
         </mat-card-content>
+
+        <button [matMenuTriggerFor]="menuAddress" class="icon-more-options" mat-icon-button>
+            <mat-icon>more_vert</mat-icon>
+        </button>
+
+        <mat-menu #menuAddress="matMenu">
+            <button mat-menu-item (click)="editAddress()">Edit</button>
+        </mat-menu>
 
     </mat-card>
 
