--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -37,6 +37,6 @@
 </div>
 <div mat-dialog-actions>
     <button [disabled]="loading" mat-button (click)="onNoClick()" [mat-dialog-close]="">Cancel</button>
-    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="saveUser()" [mat-dialog-close]=""
-        cdkFocusInitial>Save</button>
+    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="updateUserAddress()"
+        [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </div>
