--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -5,7 +5,7 @@
         <div class="user-details-header">
             <h2>{{ user.firstName }} {{ user.lastName}}</h2>
             {{ user.email }} <br>
-            Birthday: {{ user.birthDate }}
+            Birthday: {{ birthDayShow }}
         </div>
 
         <button [matMenuTriggerFor]="menuHeader" class="icon-more-options" mat-icon-button>
