--- a/src/app/dialog-edit-address/dialog-edit-address.component.html
+++ b/src/app/dialog-edit-address/dialog-edit-address.component.html
@@ -36,7 +36,7 @@
 
 </div>
 <div mat-dialog-actions>
-    <button [disabled]="loading" mat-button (click)="onNoClick()" [mat-dialog-close]="">Cancel</button>
+    <button [disabled]="loading" mat-button [mat-dialog-close]="">Cancel</button>
     <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="updateUserAddress()"
         [mat-dialog-close]="" cdkFocusInitial>Save</button>
 </div>
