--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -73,6 +73,6 @@
 </div>
 <div mat-dialog-actions>
     <button [disabled]="loading" mat-button (click)="onNoClick()" [mat-dialog-close]="">Cancel</button>
-    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="saveUser()" [mat-dialog-close]=""
-        cdkFocusInitial>Save</button>
+    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="saveUser()"
+        [mat-dialog-close]="">Save</button>
 </div>
