--- a/src/app/dialog-edit-user/dialog-edit-user.component.html
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.html
@@ -42,5 +42,5 @@
 <div mat-dialog-actions>
     <button [disabled]="loading" mat-button [mat-dialog-close]="">Cancel</button>
     <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="updateUserHeader()"
-        [mat-dialog-close]="" cdkFocusInitial>Save</button>
+        [mat-dialog-close]="">Save</button>
 </div>
