--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,24 @@
       <img class="img-logo" src="../assets/img/logo.png" alt="">
     </div>
 
+    <div class="container-drawer-content">
+      <ul>
+        <li routerLink=""><mat-icon>dashboard</mat-icon>Dashboard</li>
+        <li routerLink="user"><mat-icon>perm_identity</mat-icon>User</li>
+        <li routerLink="notes"><mat-icon>note</mat-icon>Notes</li>
+      </ul>
 
-    <ul>
-      <li routerLink=""><mat-icon>dashboard</mat-icon>Dashboard</li>
-      <li routerLink="user"><mat-icon>perm_identity</mat-icon>User</li>
 
-    </ul>
+      <div class="container-imprint-privacy">
+        <ul>
+          <li routerLink="help"><mat-icon>help</mat-icon>About</li>
+          <li routerLink="imprint"><mat-icon>policy</mat-icon>Imprint / Privacy Policy</li>
+        </ul>
 
+      </div>
+
+
+    </div>
 
 
 
