--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -4,31 +4,20 @@
     </mat-card-header>
     <!-- <mat-divider></mat-divider> -->
     <mat-card-content>
-        <p>{{ note.content }}</p>
+        <p class="global-line-break-anywhere">{{ note.content }}</p>
+        <p> Assigned to: {{ note.user }}</p>
     </mat-card-content>
     <mat-card-actions>
-        <button mat-button>
+        <button (click)="editNote(note)" mat-button>
             <mat-icon>edit</mat-icon>
             Edit note
         </button>
-        <button mat-button>
+        <button (click)="deleteNote(note)" mat-button>
             <mat-icon>delete</mat-icon>
             Delete note
         </button>
     </mat-card-actions>
 </mat-card>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
