--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,6 +31,7 @@ mat-toolbar,
 mat-toolbar-row {
     min-height: 57px;
     height: 57px;
+    position: fixed;
 }
 
 
@@ -75,4 +76,12 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+
+.container-sidenav-content {
+    position: relative;
+
+
+
 }
