--- a/src/app/dialog-add-note/dialog-add-note.component.html
+++ b/src/app/dialog-add-note/dialog-add-note.component.html
@@ -8,7 +8,7 @@
     <div class="container-input-title">
         <mat-form-field appearance="outline">
             <mat-label>Title</mat-label>
-            <input (keyup)="checkValidation()" required id="title" name="title" class="form-control" minlength="4"
+            <input (keyup)="checkValidation()" required id="title" name="title" class="form-control" minlength="1" maxlength="32"
                 #name="ngModel" [disabled]="loading" [(ngModel)]="note.title" matInput placeholder="">
         </mat-form-field>
 
