--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,5 +7,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 .global-line-break-anywhere {
-    line-break: anywhere;
+    word-wrap: break-word;
 }
