--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-end;
     //height: 88px;
     height: 160px;
 
@@ -97,4 +97,5 @@
     align-items: flex-end;
     gap: 4px;
     width: 100%;
+    margin: 0;
 }
