added articles section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,8 @@
         <li routerLink=""><mat-icon>dashboard</mat-icon>Dashboard</li>
         <li routerLink="user"><mat-icon>perm_identity</mat-icon>User</li>
         <li routerLink="notes"><mat-icon>note</mat-icon>Notes</li>
+        <li routerLink="articles"><mat-icon>article</mat-icon>Articles</li>
+        <li routerLink="orders"><mat-icon>sell</mat-icon>Orders</li>
       </ul>
 
 
