--- a/src/app/dialog-edit-user/dialog-edit-user.component.scss
+++ b/src/app/dialog-edit-user/dialog-edit-user.component.scss
@@ -25,3 +25,9 @@
 .input-email {
     width: 100%;
 }
+
+.container-btn {
+    display: flex;
+    justify-content: space-between;
+    gap: 8px;
+}
