--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -15,12 +15,12 @@
 
         <mat-menu #menuHeader="matMenu">
             <button mat-menu-item (click)="editUserDetail()">
-                <mat-icon>edit</mat-icon>
+                <mat-icon color="primary">edit</mat-icon>
                 Edit user
             </button>
 
             <button mat-menu-item (click)="deleteUser()">
-                <mat-icon>delete</mat-icon>
+                <mat-icon color="warn">delete</mat-icon>
                 Delete user
             </button>
         </mat-menu>
@@ -45,7 +45,7 @@
 
         <mat-menu #menuAddress="matMenu">
             <button mat-menu-item (click)="editAddress()">
-                <mat-icon>edit</mat-icon>
+                <mat-icon color="primary">edit</mat-icon>
                 Edit address
             </button>
         </mat-menu>
