--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
         <li routerLink="notes"><mat-icon>note</mat-icon>Notes</li>
         <li routerLink="articles"><mat-icon>article</mat-icon>Articles</li>
         <li routerLink="orders"><mat-icon>sell</mat-icon>Orders</li>
+        <li routerLink="datamanagement"><mat-icon>storage</mat-icon>Data Management</li>
       </ul>
 
 
