--- a/src/app/dialog-delete-article/dialog-delete-article.component.html
+++ b/src/app/dialog-delete-article/dialog-delete-article.component.html
@@ -5,7 +5,8 @@
         </mat-card-header>
         <mat-card-content>
             <p>Do you want to delete this article?</p>
-            <mat-divider></mat-divider> <br>
+            <h2> --> {{ article.itemNumber }} {{ article.itemDesc }} <-- </h2>
+                    <mat-divider></mat-divider> <br>
         </mat-card-content>
 
         <mat-card-actions class="container-btn">
