--- a/src/app/dialog-edit-article/dialog-edit-article.component.html
+++ b/src/app/dialog-edit-article/dialog-edit-article.component.html
@@ -84,8 +84,14 @@
 
 
 
-<div mat-dialog-actions>
-    <button [disabled]="loading" mat-button (click)="onNoClick()" [mat-dialog-close]="">Cancel</button>
-    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="saveArticle()"
-        [mat-dialog-close]="">Save</button>
+<div class="container-btn" mat-dialog-actions>
+    <button [disabled]="loading" mat-flat-button color="warn" (click)="onNoClick()" [mat-dialog-close]="">
+        Cancel
+        <mat-icon>cancel</mat-icon>
+    </button>
+    <button [disabled]="loading || formIncomplete" mat-flat-button color="primary" type="submit" (click)="saveArticle()"
+        [mat-dialog-close]="">
+        Save
+        <mat-icon>save</mat-icon>
+    </button>
 </div>
