--- a/src/app/dialog-edit-supplier/dialog-edit-supplier.component.scss
+++ b/src/app/dialog-edit-supplier/dialog-edit-supplier.component.scss
@@ -1,3 +1,9 @@
+mat-form-field {
+    display: flex;
+    gap: 16px;
+    padding: 4px 0;
+}
+
 .container-btn {
     display: flex;
     justify-content: space-between;
