--- a/src/app/dialog-add-category/dialog-add-category.component.html
+++ b/src/app/dialog-add-category/dialog-add-category.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <div mat-dialog-actions>
-    <button [disabled]="loading" mat-button [mat-dialog-close]="">Cancel</button>
-    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="saveCategory()"
+    <button [disabled]="loading" mat-flat-button color="warn" [mat-dialog-close]="">Cancel</button>
+    <button [disabled]="loading || formIncomplete" mat-flat-button color="primary" type="submit" (click)="saveCategory()"
         [mat-dialog-close]="">Save</button>
 </div>
