--- a/src/app/dialog-add-supplier/dialog-add-supplier.component.html
+++ b/src/app/dialog-add-supplier/dialog-add-supplier.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <div mat-dialog-actions>
-    <button [disabled]="loading" mat-button [mat-dialog-close]="">Cancel</button>
-    <button [disabled]="loading || formIncomplete" mat-button type="submit" (click)="saveSupplier()"
-        [mat-dialog-close]="">Save</button>
+    <button [disabled]="loading" mat-flat-button color="warn" [mat-dialog-close]="">Cancel</button>
+    <button [disabled]="loading || formIncomplete" mat-flat-button color="primary" type="submit"
+        (click)="saveSupplier()" [mat-dialog-close]="">Save</button>
 </div>
