edit and delete category works!
debugged the error, everything is working :-)

--- a/src/app/dialog-delete-category/dialog-delete-category.component.html
+++ b/src/app/dialog-delete-category/dialog-delete-category.component.html
@@ -6,6 +6,7 @@
         <mat-card-content>
             <p>Do you want to delete this category?</p>
             <h2> --> {{ category.name }} <-- </h2>
+            <mat-hint>Category will be removed at the affected Articles!</mat-hint>
                     <mat-divider></mat-divider> <br>
         </mat-card-content>
 
