--- a/src/app/dialog-delete-supplier/dialog-delete-supplier.component.html
+++ b/src/app/dialog-delete-supplier/dialog-delete-supplier.component.html
@@ -6,6 +6,7 @@
         <mat-card-content>
             <p>Do you want to delete this supplier?</p>
             <h2> --> {{ supplier.name }} <-- </h2>
+                    <mat-hint>Category will be removed at the affected Articles!</mat-hint>
                     <mat-divider></mat-divider> <br>
         </mat-card-content>
 
