--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
         <li routerLink="user"><mat-icon>perm_identity</mat-icon>User</li>
         <li routerLink="notes"><mat-icon>note</mat-icon>Notes</li>
         <li routerLink="articles"><mat-icon>article</mat-icon>Articles</li>
+        <li routerLink="customers"><mat-icon>group</mat-icon>Customers</li>
         <li routerLink="orders"><mat-icon>sell</mat-icon>Orders</li>
         <li routerLink="datamanagement"><mat-icon>storage</mat-icon>Data Management</li>
       </ul>
