--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -77,12 +77,12 @@
 
         <mat-menu #menuHeader="matMenu">
             <button mat-menu-item (click)="editNote(note)">
-                <mat-icon>edit</mat-icon>
+                <mat-icon color="primary">edit</mat-icon>
                 Edit note
             </button>
 
             <button mat-menu-item (click)="deleteNote(note)">
-                <mat-icon>delete</mat-icon>
+                <mat-icon color="warn">delete</mat-icon>
                 Delete note
             </button>
         </mat-menu>
